--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -20,11 +20,16 @@
 			</MenuItem>
 			<MenuItem Header="Pizza">
 				<MenuItem Header="Make">
-					<MenuItem x:Name="margPizzaMenuItem" Header="Margherita Pizza"/>
-					<MenuItem x:Name="pepPizzaMenuItem" Header="Pepperoni Pizza"/>
-					<MenuItem x:Name="vegPizzaMenuItem" Header="Veggie Pizza"/>
-					<MenuItem x:Name="quatPizzaMenuItem" Header="Quattro Stagioni Pizza"/>
-					<MenuItem x:Name="canPizzaMenuItem" Header="Canibale Pizza"/>
+					<MenuItem x:Name="margPizzaMenuItem" Header="Margherita Pizza"
+							  Click="margPizzaMenuItem_Click" IsCheckable="True"/>
+					<MenuItem x:Name="pepPizzaMenuItem" Header="Pepperoni Pizza"
+							  Click="pepPizzaMenuItem_Click" IsCheckable="True"/>
+					<MenuItem x:Name="vegPizzaMenuItem" Header="Veggie Pizza"
+							  Click="vegPizzaMenuItem_Click" IsCheckable="True"/>
+					<MenuItem x:Name="quatPizzaMenuItem" Header="Quattro Stagioni Pizza"
+							  Click="quatPizzaMenuItem_Click" IsCheckable="True"/>
+					<MenuItem x:Name="canPizzaMenuItem" Header="Canibale Pizza"
+							  Click="canPizzaMenuItem_Click" IsCheckable="True"/>
 				</MenuItem>
 				<MenuItem Header="Stop"/>
 			</MenuItem>
